--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
-    <color name="story_bg">#f8f9fe</color>
+    <color name="story_bg">#59606D</color>
     <color name="text_color">#fff</color>
     <color name="white_bg">#fff</color>
 
