--- a/app/src/main/res/layout/activity_read_story2.xml
+++ b/app/src/main/res/layout/activity_read_story2.xml
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/chapter_text"
+        android:textColor="@color/text_color"
         android:layout_below="@+id/chapter_title"
         android:layout_marginTop="35dp"
         android:layout_marginLeft="30dp"
