Added menu to Story Listing screen

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/bg_cyan">
+        android:background="@color/bg_cyan"
+        android:orientation="vertical"
+        android:gravity="center">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:src="@drawable/logo"></ImageView>
+
     </LinearLayout>
 
 
