--- a/app/src/main/res/layout/view_holder_story.xml
+++ b/app/src/main/res/layout/view_holder_story.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="90dp">
+    android:layout_height="150dp"
+    android:layout_marginTop="15dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,6 +23,16 @@
         android:layout_height="wrap_content"
         android:text="Body: This is the sneek peek for the story."
         android:textSize="16dp"
+        android:maxLength="100"
         android:id="@+id/txt_body"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimary"
+        android:text="@string/read_novel"
+        android:onClick="OnReadStory"
+        />
+
 
 </LinearLayout>
